attached_assets/Pasted-2025-06-23-13-16-06-269-lcas2-core-core-PluginManager-ERROR-Error-loading-plugin-advanced-patt-1750684792816_1750684792830.txt
2025-06-23 13:16:06,269 - lcas2.core.core.PluginManager - ERROR - Error loading plugin advanced_pattern_discovery_plugin: expected an indented block after 'if' statement on line 805 (advanced_pattern_discovery_plugin.py, line 807)
Traceback (most recent call last):
  File "/home/runner/workspace/lcas2/core/core.py", line 171, in load_plugin
    module = importlib.import_module(plugin_name_stem) # Use stem for import
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/nb21sc3npfc8gvazwnrjxpvb5d48jysx-python3-3.12.7/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/runner/workspace/lcas2/plugins/advanced_pattern_discovery_plugin.py", line 807
    content_to_parse = content_to_parse[:-3].strip()
IndentationError: expected an indented block after 'if' statement on line 805
2025-06-23 13:16:06,278 - lcas2.core.core.PluginManager - ERROR - Error loading plugin ai_foundation_plugin: invalid syntax (ai_foundation_plugin.py, line 817)
Traceback (most recent call last):
  File "/home/runner/workspace/lcas2/core/core.py", line 171, in load_plugin
    module = importlib.import_module(plugin_name_stem) # Use stem for import
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/nb21sc3npfc8gvazwnrjxpvb5d48jysx-python3-3.12.7/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/runner/workspace/lcas2/plugins/ai_foundation_plugin.py", line 817
    ```
    ^
SyntaxError: invalid syntax
2025-06-23 13:16:06,294 - lcas2.core.core.PluginManager - ERROR - Error loading plugin multi_agent_analysis_plugin: cannot import name 'AgentResult' from 'lcas2.agents.base_agent' (/home/runner/workspace/lcas2/agents/base_agent.py)
Traceback (most recent call last):
  File "/home/runner/workspace/lcas2/core/core.py", line 171, in load_plugin
    module = importlib.import_module(plugin_name_stem) # Use stem for import
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/nb21sc3npfc8gvazwnrjxpvb5d48jysx-python3-3.12.7/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/runner/workspace/lcas2/plugins/multi_agent_analysis_plugin.py", line 13, in <module>
    from lcas2.agents.agent_coordinator import AgentCoordinator
  File "/home/runner/workspace/lcas2/agents/__init__.py", line 8, in <module>
    from .agent_coordinator import AgentCoordinator, AnalysisWorkflow
  File "/home/runner/workspace/lcas2/agents/agent_coordinator.py", line 12, in <module>
    from .document_intelligence_agent import DocumentIntelligenceAgent
  File "/home/runner/workspace/lcas2/agents/document_intelligence_agent.py", line 10, in <module>
    from .base_agent import BaseAgent, AgentResult
ImportError: cannot import name 'AgentResult' from 'lcas2.agents.base_agent' (/home/runner/workspace/lcas2/agents/base_agent.py)